--- a/camel-spring-boot-upgrade-recipes/pom.xml
+++ b/camel-spring-boot-upgrade-recipes/pom.xml
@@ -33,7 +33,8 @@
     <description>Migration recipes (using openrewrite) for Camel Spring Boot to make Maven migrations easier</description>
 
     <properties>
-        <spring-rewrite-version>5.24.1</spring-rewrite-version>
+        <!-- Update this with each spring-rewrite release -->
+        <spring-rewrite-version>6.0.1</spring-rewrite-version>
     </properties>
 
     <dependencies>
