--- a/camel-spring-boot-upgrade-recipes/pom.xml
+++ b/camel-spring-boot-upgrade-recipes/pom.xml
@@ -29,6 +29,13 @@
 
     <artifactId>camel-spring-boot-upgrade-recipes</artifactId>
 
+    <properties>
+        <camel-version>${project.version}</camel-version>
+        <!-- Use same version as https://github.com/apache/camel-spring-boot/blob/${project.version}/pom.xml#L111C9-L111C57 -->
+        <spring-boot-version>3.4.0</spring-boot-version>
+        <springframework-version>6.2.0</springframework-version>
+    </properties>
+
     <name>Camel Spring Boot Upgrades Recipes</name>
     <description>Migration recipes (using openrewrite) for Camel Spring Boot to make Maven migrations easier</description>
 
