--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,8 @@
         <camel4.6-version>4.6.0</camel4.6-version>
         <camel4.8-version>4.8.0</camel4.8-version>
 
+        <camel-version>${project.version}</camel-version>
+
         <rewrite-recipe-bom.version>2.23.1</rewrite-recipe-bom.version>
 
         <lombok.version>1.18.34</lombok.version>
