Update openrewrite + Camel 4.9 recipe with pom updates (#21)
* Update openrewrite + Camel recipe

* Handle rewrite-spring dependency via rewrite-recipe-bom

* Update to SB 3.4.0

* Add UpgradeParentVersion for Camel

--- a/camel-spring-boot-upgrade-recipes/pom.xml
+++ b/camel-spring-boot-upgrade-recipes/pom.xml
@@ -29,12 +29,14 @@
 
     <artifactId>camel-spring-boot-upgrade-recipes</artifactId>
 
+    <properties>
+        <!-- Use same version as https://github.com/apache/camel-spring-boot/blob/${project.version}/pom.xml#L111C9-L111C57 -->
+        <spring-boot-version>3.4.0</spring-boot-version>
+        <springframework-version>6.2.0</springframework-version>
+    </properties>
+
     <name>Camel Spring Boot Upgrades Recipes</name>
     <description>Migration recipes (using openrewrite) for Camel Spring Boot to make Maven migrations easier</description>
-
-    <properties>
-        <spring-rewrite-version>5.24.1</spring-rewrite-version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -45,7 +47,6 @@
         <dependency>
             <groupId>org.openrewrite.recipe</groupId>
             <artifactId>rewrite-spring</artifactId>
-            <version>${spring-rewrite-version}</version>
         </dependency>
     </dependencies>
 
