Add a camel-spring-boot-version separate from camel-version to deal with the camel-spring-boot versions in the rewrite recipes

--- a/camel-spring-boot-upgrade-recipes/src/main/resources/META-INF/rewrite/4.10.yaml
+++ b/camel-spring-boot-upgrade-recipes/src/main/resources/META-INF/rewrite/4.10.yaml
@@ -32,7 +32,7 @@ recipeList:
   - org.openrewrite.maven.UpgradeDependencyVersion:
       groupId: '*camel*'
       artifactId: 'camel-spring-boot-bom'
-      newVersion: @project.version@
+      newVersion: @camel-spring-boot-version@
   - org.openrewrite.maven.RemoveDependency:
         groupId: org.apache.camel.springboot
         artifactId: camel-k-starter
