--- a/camel-spring-boot-upgrade-recipes/src/main/resources/META-INF/rewrite/4.11.yaml
+++ b/camel-spring-boot-upgrade-recipes/src/main/resources/META-INF/rewrite/4.11.yaml
@@ -16,19 +16,26 @@
 #
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: org.apache.camel.upgrade.camel49.CamelSpringBootMigrationRecipe
-displayName: Migrates `Camel Spring Boot` application to `Camel Spring Boot 4.9`
-description: Migrates `Camel Spring Boot` application to `Camel Spring Boot 4.9`
+name: org.apache.camel.upgrade.camel411.CamelSpringBootMigrationRecipe
+displayName: Migrates Camel Spring Boot applications to Camel Spring Boot 4.11
+description: Migrates Camel Spring Boot applications to Camel Spring Boot 4.11
 recipeList:
+  - org.apache.camel.upgrade.camel411.CamelMigrationRecipe
+  - org.apache.camel.upgrade.camel410.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel49.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel47.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel46.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel45.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel44.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel40.CamelMigrationRecipe
-  - org.apache.camel.upgrade.UpgradeToJava17
-  - org.apache.camel.upgrade.JavaVersion17
+  - org.apache.camel.upgrade.UpdateCamelSpringBootPropertiesAndYamlKeys
   - org.openrewrite.maven.UpgradeDependencyVersion:
       groupId: '*camel*'
       artifactId: 'camel-spring-boot-bom'
-      newVersion: @camel-spring-boot-version@
+      newVersion: @project.version@
+  - org.openrewrite.maven.RemoveDependency:
+        groupId: org.apache.camel.springboot
+        artifactId: camel-k-starter
+  - org.openrewrite.maven.RemoveDependency:
+        groupId: org.apache.camel.springboot
+        artifactId: camel-etcd3-starter
