--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,10 @@
         <camel-version>${project.version}</camel-version>
         <camel-spring-boot-version>${project.version}</camel-spring-boot-version>
 
+        <!-- versions for camel-spring-boot -->
+        <spring-boot-version>3.4.2</spring-boot-version>
+        <springframework-version>6.2.2</springframework-version>
+
         <rewrite-recipe-bom.version>3.0.2</rewrite-recipe-bom.version>
 
         <lombok.version>1.18.34</lombok.version>
