--- a/camel-spring-boot-upgrade-recipes/src/main/resources/META-INF/rewrite/4.12.yaml
+++ b/camel-spring-boot-upgrade-recipes/src/main/resources/META-INF/rewrite/4.12.yaml
@@ -16,10 +16,9 @@
 #
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: org.apache.camel.upgrade.CamelSpringBootMigrationRecipe
-displayName: Migrate to Apache Camel Spring Boot @camel-version@
-description: >- 
-  Migrate applications to Apache Camel Spring Boot @camel-version@ and Spring Boot @spring-boot-version@
+name: org.apache.camel.upgrade.camel412.CamelSpringBootMigrationRecipe
+displayName: Migrates Camel Spring Boot applications to Camel Spring Boot 4.12
+description: Migrates Camel Spring Boot applications to Camel Spring Boot 4.12
 recipeList:
   - org.apache.camel.upgrade.camel412.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel411.CamelMigrationRecipe
@@ -30,45 +29,14 @@ recipeList:
   - org.apache.camel.upgrade.camel45.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel44.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel40.CamelMigrationRecipe
-  - org.apache.camel.upgrade.UpgradeToJava17
-  - org.apache.camel.upgrade.JavaVersion17
   - org.apache.camel.upgrade.UpdateCamelSpringBootPropertiesAndYamlKeys
   - org.openrewrite.maven.UpgradeDependencyVersion:
       groupId: '*camel*'
       artifactId: 'camel-spring-boot-bom'
-      newVersion: @camel-spring-boot-version@
-  - org.openrewrite.maven.UpgradeDependencyVersion:
-      groupId: 'org.apache.camel.springboot'
-      artifactId: 'spring-boot'
-      newVersion: @camel-spring-boot-version@
-  - org.openrewrite.maven.UpgradeDependencyVersion:
-      groupId: 'org.apache.camel.springboot'
-      artifactId: 'camel-spring-boot-dependencies'
-      newVersion: @camel-spring-boot-version@
-  - org.openrewrite.maven.UpgradeDependencyVersion:
-      groupId: 'org.apache.camel.springboot'
-      artifactId: 'camel-spring-boot-dependencies'
-      newVersion: @camel-spring-boot-version@
-  - org.openrewrite.maven.UpgradeDependencyVersion:
-      groupId: org.springframework.boot
-      artifactId: "*"
-      newVersion: @spring-boot-version@
-      overrideManagedVersion: false
-  - org.openrewrite.maven.UpgradePluginVersion:
-      groupId: org.springframework.boot
-      artifactId: spring-boot-maven-plugin
-      newVersion: @spring-boot-version@
-  - org.openrewrite.maven.UpgradeDependencyVersion:
-      groupId: org.springframework
-      artifactId: "*"
-      newVersion: @springframework-version@
-  - org.openrewrite.maven.UpgradeParentVersion:
-      groupId: org.springframework.boot
-      artifactId: spring-boot-starter-parent
-      newVersion: @spring-boot-version@
+      newVersion: @project.version@
   - org.openrewrite.maven.RemoveDependency:
-       groupId: org.apache.camel.springboot
-       artifactId: camel-k-starter
+        groupId: org.apache.camel.springboot
+        artifactId: camel-k-starter
   - org.openrewrite.maven.RemoveDependency:
         groupId: org.apache.camel.springboot
         artifactId: camel-etcd3-starter
